[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/styles/action_button/ActionButtonNormalStyle.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/styles/action_button/ActionButtonPressedStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/styles/action_button/ActionButtonHoverStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/styles/action_button/ActionButtonDisabledStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/sprites/symbols/money.png" type="Texture" id=5]
[ext_resource path="res://scripts/ui/action_button.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="ActionButton" type="Button"]
margin_right = 500.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.705882, 0.705882, 0.705882, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 1 )
icon_align = 2
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 20.0
margin_right = -26.0
margin_bottom = -20.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 448.0
margin_bottom = 40.0

[node name="HorizontallyExtendingControl1" type="Control" parent="MarginContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="BeforeTextureLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 284.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_vertical = 3
text = "Upgrade (50"
align = 2
valign = 1

[node name="SymbolTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="AfterTextureLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 344.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_vertical = 3
text = ")"
valign = 1

[node name="HorizontallyExtendingControl2" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 348.0
margin_right = 448.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_horizontal = 3
